# TermForge

./: .gitignore  AGENTS.md  CHANGELOG.md  PROGRESS.md  README.md  SPEC.md  pr_response.json  pyproject.toml
.github/workflows/: deploy-docs.yml
docs-site/: generate_docs.py  index.html
stories/accordion/: accordion_demo.golden.txt  accordion_demo.py
stories/animation/: spinner_showcase.golden.txt  spinner_showcase.py
stories/borders/: border_styles.golden.txt  border_styles.py  scrollbar_demo.golden.txt  scrollbar_demo.py
stories/card/: card_demo.golden.txt  card_demo.py
stories/charts/: bar_chart.golden.txt  bar_chart.py  candlestick.golden.txt  candlestick.py  line_chart.golden.txt  line_chart.py  sparkline.golden.txt  sparkline.py  sparkline_gradient_demo.golden.txt  sparkline_gradient_demo.py  streaming_demo.golden.txt  streaming_demo.py
stories/checklist/: checklist_demo.golden.txt  checklist_demo.py
stories/combobox/: combobox_demo.golden.txt  (+1 more)
termforge/: __init__.py  reactive.py
tests/: test_accordion.py  test_animation.py  test_badge.py  test_borders.py  test_breadcrumbs.py  test_buttongroup.py  test_card.py  test_charts.py  test_checklist.py  test_cli_benchmark.py  test_cli_contrast.py  test_cli_convert.py  test_cli_format.py  test_cli_init.py  test_cli_inspect.py  test_cli_layout.py  test_cli_layout_depth.py  test_cli_play.py  test_cli_responsive.py  test_cli_schema.py  test_cli_validate.py  test_cli_watch.py  test_combobox.py  test_config.py  test_config_input.py  test_core.py  test_diff.py  test_divider.py  test_form.py  test_hooks.py  test_image.py  test_keylegend.py  test_keyvalue.py  test_layout_constraints.py  test_layout_logging.py  test_logos.py  test_logstreamer.py  test_menubar.py  test_presets.py  test_radio.py  (+19 more)
(+261 files in other folders)
