[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termforge"
version = "0.1.0"
description = "A universal terminal UI/UX design system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TermForge Contributors" },
]
keywords = ["terminal", "tui", "ui", "charts", "ascii-art", "theming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
termforge-demo = "termforge.cli.demo:main"
termforge-story = "termforge.cli.story:main"
termforge-layout = "termforge.cli.layout:main"
termforge-validate = "termforge.cli.validate:main"
termforge-inspect = "termforge.cli.inspect:main"
termforge-schema = "termforge.cli.schema:main"
termforge-format = "termforge.cli.format:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
